--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 
 body{
-	--main-site-color:  #ff7f3f ;
-	//--main-site-color:  //#68a2ff ;
+	
+	--main-site-color:  #68a2ff ;
   	background-color: #efefef ;  
 
 }
