--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,36 @@
 
+
+:root{
+	--main-site-color:  #68a2ff ;
+}
 body{
 	
-	--main-site-color:  #68a2ff ;
   	background-color: #efefef ;  
 
 }
 
+.pure-button.pure-button-primary,
+.pure-button {
+	background-color: var(--main-site-color); 
+	color: white ;
+	margin-top: 2px ;
+	margin-bottom: 2px;
+}
 .pure-button-inverted{
 	color: var(--main-site-color);
 	background-color: white ; 
+	border-color: var(--main-site-color) ; 
+	border-style: solid ;
+	border-width: 1px ; 
 }
+
+.pure-button-active{
+	text-decoration: bold ; 
+	border-style: solid ; 
+	border-color: #7A7 ; 
+	border-width: 1px;
+}
+
 
 #site-title{
 
@@ -32,12 +53,9 @@ main{
 	margin-top: 5% ;
 }
 
-.pure-button.pure-button-primary{
-	background-color: var(--main-site-color); 
-}
 
 .island{
-	 box-shadow: 0px 2px 5px -3px rgba(0,0,0,1);
+	box-shadow: 0px 2px 5px -3px rgba(0,0,0,1);
   	background-color: white ;
   	margin: 3px ;
   	padding: 5px;
@@ -51,7 +69,18 @@ main{
 	margin-right: auto ; 
 }
 
+.pure-form input{
+	margin-top: 2px; 
+	margin-bottom: 2px ; 
+}
+.pure-form-stacked input{
+	text-align: center ; 
+	margin-left: auto!important ; 
+	margin-right: auto !important; 
+}
+
+
 footer{
-	bottom: 0;
-	position: absolute; 
+	bottom: 0 ;
+	
 }
