--- a/src/style.css
+++ b/src/style.css
@@ -114,3 +114,20 @@ footer{
 
 	
 }
+
+.table-row{
+	-webkit-box-shadow: inset 0px -1px 19px 6px rgba(239,239,239,1);
+	-moz-box-shadow: inset 0px -1px 19px 6px rgba(239,239,239,1);
+	box-shadow: inset 0px -1px 19px 6px rgba(239,239,239,1);
+	background-color: white ; 
+}
+
+.table-row td{
+	color: var(--main-site-color);
+
+}
+
+.table-row:hover{
+	cursor: pointer;
+	background-color: #efefef ; 
+}
