--- a/src/style.css
+++ b/src/style.css
@@ -131,3 +131,14 @@ footer{
 	cursor: pointer;
 	background-color: #efefef ; 
 }
+
+.pure-menu-item{
+	
+	font-size: 1.2em ; 
+	border-top-style: solid ;
+	border-width: 1px ;
+	border-color: rgba(1,1,1,.1) ;
+	padding: 5px ;  
+	color: var(--main-site-color);
+
+}
